[package]
name = "telegram_bot"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4.16"
futures = "0.3.21"
tokio = { version =  "1.17.0", features = ["rt-multi-thread", "macros"] }
tokio-stream = "0.1.8"
async-trait = "0.1.53"
async-channel="1.6.1"
url = "2.2.2"
warp = {version= "0.3",  features = ["tls"] }
teloxide-core = "0.5.0"
teloxide = { version = "0.8.0", features = ["macros", "auto-send"] }

[dev-dependencies]
mockall = "0.11.0"
