[package]
edition = "2021"
name = "telegram_bot"
version = "0.6.4"

[dependencies]
async-channel = "1.6.1"
async-trait = "0.1.56"
futures = "0.3.21"
log = "0.4.17"
teloxide = {version = "0.9.2", features = ["full", "macros", "auto-send"]}
tokio = {version = "1.19.2", features = ["full"]}
tokio-stream = "0.1.9"
url = "2.2.2"
warp = {version = "0.3.2", features = ["tls"]}

[dev-dependencies]
mockall = "0.11.1"
